@@ -20,6 +20,7 @@ Mantis ChangeLog
 - 0004145: [feature] Mantis pages should have descriptive titles (vboctor)
 - 0004185: [customization] Support custom menu options (vboctor)
 - 0003975: [email] Realname vs username in email history (thraxisp)
+- 0004147: [email] Receiving emails in foreign languages (thraxisp)
 - 0003880: [filters] Ordering doesnt take last_updated into account (narcissus)
 - 0003928: [filters] 'Copy Issue' was not copying attachments (narcissus)
 - 0003945: [filters] Give the ability to "Update Fixed in Version" in view_all_bug_page.php (narcissus)
@@ -55,6 +56,7 @@ Mantis ChangeLog
 - 0004078: [upgrade] Script to import the value of a custom field to a native field (thraxisp) 
 - 0003483: [upgrade] some admin users permissions not completly upgraded from 0.17.5 to 0.18.0 (thraxisp)
 - 0003877: [email] Upgrade to PHPMailer 1.72 (vboctor)
+- 0004147: [email] Receiving emails in foreign languages (thraxisp)
 - 0002220: [installation] usage of consistent naming schema for images (vboctor)
 - 0003307: [installation] check.php always checks mail() rather than the config (thraxisp)
 - 0004163: [other] Unreadable error messages in some languages (vboctor)
